src/css/stylesheet.css
@import url(http://fonts.googleapis.com/css?family=Oswald:700);
@import url(http://fonts.googleapis.com/css?family=Raleway);


body
{
    font-family: 'Raleway', sans-serif;
       
}
h2
{
    margin: 0;
    margin-bottom: 2%;
}
.input-group
{
    width: 100%;
}
.input-group input
{
    width: 80%;
}
.popover-content {
    font-size: 11px;
}

/* ************************************************* */
/*                    Navigaition Section            */
/* ************************************************* */
.navbar
{
    border: 0;
    border-radius: 0;
    background: #4eaacf;
}
.navbar-default .navbar-brand
{
    color: #fff;
}
.navbar-default .navbar-brand:hover
{
    color: #fff;
}
.navbar-default .navbar-brand:visited
{
    color: #fff;
}

/* ************************************************* */
/*                    Search Venue Section           */
/* ************************************************* */
.Main_Search #home-header {

  z-index: -1;
  height: 100%;

  background: url("../src/images/sf.jpg") no-repeat ;
  background-size: 100% 100%;


   -webkit-filter: blur(5px) opacity(0.9) brightness(0.7);
  -moz-filter: blur(5px) opacity(0.9) brightness(0.7);
  -o-filter: blur(5px) opacity(0.9) brightness(0.7);
  -ms-filter: blur(5px) opacity(0.9) brightness(0.7);
filter: blur(5px) opacity(0.9) brightness(0.7);
}

.middle{
    position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
-o-transform: translate(-50%, -50%);
-opera-transform: translate(-50%, -50%);
-moz-transform: translate(-50%, -50%);

  transform: translate(-50%, -50%);
  z-index: 999999;
  width: 85%;
  color: #FFFFFF;
}

.middle-title-1{
    font-size: 3.1em;  text-align: center;
}
.middle-title-2{
    font-size: 3.4em;  text-align: center;
}
.middle-title-3{
    font-size: 1em; color: #D2E6FFl; text-align: center;
}
.middle-form {
    width: 40%;
}
#search{
    display: block;
    margin-top: 10px;
    border: 0;
  background: #4eaacf; width: 100%; color: #fff;
  padding: 16px 47px;

}
#search:hover{
  opacity: 0.9;
}

  #overons{
    padding-left: 5%;
    padding-right: 5%;
    min-height: 640px;
    padding: 53px;

  }

.searchVenueContainer{
    padding: 0;
    height: 92%;
    position: relative;
    overflow-y: scroll;
}
.searchVenueList
{
    padding: 0;
    list-style-type: none;
}
.searchVenueList li
{
    padding: 10px 15px;
    cursor: pointer;
    border-bottom: 2px solid #ECA729;
}
.searchVenueList li:first-child{
        border-top: 2px solid #ECA729;

}
.SearchVenueFilterContainer{
    padding: 0 25px;
}
.searchVenueList li:hover{
    background: #C0D0D6;
}
.SearchVenuePhoto
{
    width: 180px;
}
.searchVenueIndex{
    font-size: 1.4em;
    font-weight: bold;
}
.SearchVenueUserPhoto{
    width: 30px;
}
.searchVenueBody
{
    letter-spacing: 0.05em;
    width: 254px;
}
.searchVenueRating{
     padding: 10px;

    color: #fff;
    border-bottom-right-radius: 50%;
    border-bottom-left-radius: 50%;

    background: #006c00;
}
.searchVenueAddress{
    line-height: 2.4em;
}
.dropDownSearchList{
    float: left;
    margin-left: 5%;
}

.searhVenueUserTip{
    font-size: 0.9em;
    font-style: italic;
    font-weight: bold;
}

.innerDropDownSearchList{
    padding: 0;
    list-style-type: none;
}

.well {
    background: #fff;
    border: 0;
    border-top: 1px solid #D9D9D9;
    border-bottom: 1px solid #D9D9D9;
        font-size: 1em;

}

#spinner.active {
    display: block;
}
#spinner {
    display: none;
    position: absolute;
    height: 60px;
    width: 60px;
    top: 40%;
    left: 48%;
    z-index: 1;

}
.ball {
    position: absolute;
    display: block;
    background-color: #4eaacf;
    left: 0px;
    width: 13px;
    height: 13px;
    border-radius: 6px;
}
#first {
    -webkit-animation-timing-function: cubic-bezier(0.5, 0.3, 0.9, 0.9);
    -webkit-animation-name: rotate; 
    -webkit-animation-duration: 2s; 
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 6px 30px;
    -moz-animation-timing-function: cubic-bezier(0.5, 0.3, 0.9, 0.9);
    -moz-animation-name: rotate; 
    -moz-animation-duration: 2s; 
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 6px 30px;

}
#second {
    -webkit-animation-timing-function: cubic-bezier(0.5, 0.5, 0.9, 0.9);
    -webkit-animation-name: rotate; 
    -webkit-animation-duration: 2s; 
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 6px 30px;
      -moz-animation-timing-function: cubic-bezier(0.5, 0.5, 0.9, 0.9);
    -moz-animation-name: rotate; 
    -moz-animation-duration: 2s; 
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 6px 30px;
}
#third {
    -webkit-animation-timing-function: cubic-bezier(0.5, 0.7, 0.9, 0.9);
    -webkit-animation-name: rotate; 
    -webkit-animation-duration: 2s; 
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 6px 30px;
      -moz-animation-timing-function: cubic-bezier(0.5, 0.7, 0.9, 0.9);
    -moz-animation-name: rotate; 
    -moz-animation-duration: 2s; 
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 6px 30px;
}
#fourth {
    -webkit-animation-timing-function: cubic-bezier(0.5, 0.7, 0.9, 0.9);
    -webkit-animation-name: rotate; 
    -webkit-animation-duration: 2s; 
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 6px 30px;
      -moz-animation-timing-function: cubic-bezier(0.5, 0.7, 0.9, 0.9);
    -moz-animation-name: rotate; 
    -moz-animation-duration: 2s; 
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 6px 30px;
}
@-webkit-keyframes rotate {
  0% {
    -webkit-transform: rotate(0deg) scale(1);
  }
  100% { 
    -webkit-transform: rotate(1440deg) scale(1); 
  }
}​

@-moz-keyframes rotate {
  0% {
    -moz-transform: rotate(0deg) scale(1);
  }
  100% { 
    -moz-transform: rotate(1440deg) scale(1); 
  }
}

.loadingOverlay
{
    opacity: .60 !important; /* Make sure to change both of these, as IE only sees the second one */

}
.activeLink, .activeLink a{
    font-weight: bold;
    color: #000;
    font-size: 1.050em;

}

/* ************************************************* */
/*                    Single Venue Section           */
/* ************************************************* */


.multiple-items
{
    width: 90%;
    margin: 0 auto;
}

a
.userReviewTotalLength{
    font-size: 1.2em;
    font-weight: bold;
}
.userReviewList
{
    line-height: 1.9em;

    padding: 0;

    list-style-type: none;
}
.userReviewList li
{
    padding: 10px 0;
}


.glyphicon-time,
.glyphicon-cutlery,
.pricing
{
    font-size: 1.1em;
}
.closedVenue
{
        font-size: 1.1em;

    color: #cd0000;
}
.openVenue
{
    color: #006c00;
    font-size: 1.1em;
}
.userReviewThumbnails
{
    width: 34px;
}
.businessInformationContainer{
    float: left;
        padding: 10px;
}
.businessMenu{
    float: right;
    margin-top: 3%;
        padding: 10px;
}
.businessHoursTitle
{
    color: #cd0000;
}
.businessHoursList
{
    padding: 0;

    list-style-type: none;
}

.businessHoursList li
{
    padding: 12px 0;
}
.businessHourHours
{
    float: right;
}

.addressName
{

    letter-spacing: 0.01em;
    text-align: center;
}
.addressName h1{
    font-family: 'Oswald', sans-serif;
    font-size: 4em;
}
.addressName p{
    font-size: 0.9em;
}

.businessRating
{
    font-size: 2.8em;
    padding: 9px 24px;
    color: #fff;
    background: #006c00;
   
}


.businessInformationList
{
    padding: 0;

    list-style-type: none;
}
.businessInformationList li
{
    padding-bottom: 12px ;
}
.businessMenu span{
    display: block;

    font-size: 1em;
}


.img-wrap
{
    position: relative;

    overflow: hidden;
}
.img-info
{
    position: absolute;
    z-index: 1000;
    bottom: 0;

    width: 100%;

    opacity: 0;
    color: #fff;
    background-color: #000;

    filter: alpha(opacity = 0);
}
.img-info h4,
.img-info p
{
    font-size: .9em;

    padding: 0 10px;
}
.img-wrap:hover .img-info
{
    -webkit-transition: opacity .25s;
       -moz-transition: opacity .25s;
            transition: opacity .25s;

    opacity: .75;

    filter: alpha(opacity = 75);
}

.float-right{
    float: right;
}

.similarVenueContainer{
    cursor: pointer;
}

.similarVenueContainer:hover{
    background: #E2E2E2;
}
.similarVenueContainer p {
    font-size: .9em;
}

/* ************************************************* */
/*            Media Breakpoint #1  @996px            */
/* ************************************************* */


@media (max-width: 996px) {
    .pull-right{
        float: none!important;
    }

}

@media (max-width: 767px) {
    #mapCanvas{
        display: none;
    }

}
/* ************************************************* */
/*            Media Breakpoint #2  @633px            */
/* ************************************************* */

@media (max-width: 633px) {
    
    .businessInformationContainer{
        float: initial;
        text-align: center;
    }
    .businessMenu{
        float: initial;
        margin-top:0;
            text-align: center;
    }
    .middle-title-1{
    font-size: 2em;  text-align: center;
}
.middle-title-2{
    font-size: 2.3em;  text-align: center;
}
.middle-title-3{
    font-size: 0.8em; color: #D2E6FFl; text-align: center;
}
.middle-form{
    width: 100%;
}
}

/* ************************************************* */
/*            Media Breakpoint #3  @500px            */
/* ************************************************* */

@media (max-width: 500px) {
    .searchVenueBody{
        display: block;
        margin: 0 auto;
        text-align: center;
    }
    
    .SearchVenuePhoto{
        width: 250px;
       margin: 0 auto;


    }
    .searchVenueAddressContainer{
        display: block;
        text-align: center;
        font-weight: bold;

    }
    .SearchVenuePhotoContainer{
        display: block;
    }
    .userReviewBody{
        text-align: center;
        display: block;
    }
    .float-right{
        float: initial;
          
    }
}

